--- a/Dissertation/part1.tex
+++ b/Dissertation/part1.tex
@@ -118,6 +118,8 @@ volume rendering?
 
 \section{Подходы к визуализации CSG} \label{sect_csg_vis}
 
+\todo{Булевы операции vs алгебраические операции над множествами}
+
 \todo{хронологически}
 
 Самым ранним способом визуализации CSG моделей была отрисовка линиями (wireframe). Для этого необходимо построить линии пересечения всех поверхностей в модели и спроектировать их на экранную плоскость. Позже, этот метод начали дополнять удалением невидимых линий. [e.g. Appel67], [An algorithm for eliminating the hidden lines in computer-drawn polyhedra 68]
@@ -127,6 +129,24 @@ volume rendering?
 Многие эксперты в CAD/CAM области того времени считали трассировку лучей непрактичным методом "грубой силы" [Roth]. [Roth] в своей работе приводит практическое описание алгоритма трассировки лучей для задачи визуализации CSG моделей, а также приводит оптимизации алгоритма. [Roth] использует ограничивающие объемы (enclosures, camera space AABB?) для ускоренного отбрасывания CSG поддеревьев гарантированно непересекающихся с лучом. [Roth] делает вывод о важности пространственной когерентности примитивов в дереве и предполагает, что CSG дерево может быть автоматически пере-упорядочено, для улучшения пространственной когерентности. Дальнейшие оптимизации были предложены в работе [Bronsvoort84].
 
 Алгоритмы бросания лучей [Roth, Goldstein and Malin] применяют один и тот же алгоритм 
+Алгоритмы бросания (ray-firing) лучей [Roth, Goldstein and Malin] применяют один и тот же алгоритм для каждой точки на экране для определения видимости поверхностей. Задача поиска поверхности соответствующей CSG выражению {сводится к одномерной задаче на луче. Формализованная классификация одномерных \todo{алгоритмов} решения Булевых выражений дана в работе \todo{[Tilove(atheron-15)]}. Главным преимуществом подходов основанных на бросании лучей является отсутствие необходимости вычислять полную граничную поверхность соответствующую CSG модели. Для определения видимой точки на луче пересекающем CSG модель можно использовать следующий алгоритм:
+
+\includegraphics[]{1.png}}
+
+\todo{Рисунок 3} показывает простоту вычисления Булевых операций в одномерном пространстве для двух примитивов. В дополнение к простоте, метод имеет дополнительное преимущество для визуализации "--- после того как ближайшая точка определена, дальнейшие вычисления можно отбросить. Однако, перед тем как применить эти простые правила, необходимо пересечь луч с CSG примитивами и отсортировать точки пересечения. К тому же, все эти шаги должны быть выполнены для каждого пикселя изображения. [Roth] описывает процедуру отсечения для уменьшения числа поверхностей, с которыми нужно пересечь луч для каждого пикселя. Однако, хотя такая оптимизация и дает эффект, тем не менее вычислительная сложность алгоритма не меняется. [Roth] также приводит метод для определения и визуализации только силуэта и линий пересечения поверхностей, но этот метод не совместим с \todo{shaded} визуализацией.
+
+\includegraphics[]{2.png}}
+
+Широко используемый в то время (1980е) для задачи определения видимости полигонов, \todo{построчный подход} к визуализации (scanline rendering), также был адаптирован для визуализации CSG моделей [atherton1983]. Типичный scanline алгоритм использующий Y-X-Z сортировку полигонов представлен ниже:
+
+\includegraphics[]{scanline.png}}
+
+Сегментом в scanline алгоритмах называется часть полигона образованная пересечением scanline плоскости и полигона.
+Интервалом называется непрерывная часть scanline, для которой возможно определить видимый сегмент. 
+
+Алгоритм предложенный [atherton1983] использует те же 4 шага что и обычный алгоритм scanline, однако вместо определения видимости сегмента в интервале по его близости к виртуальной камере (наблюдателю), используется более сложная процедура, аналогичная процедуре поиска видимой поверхности с помощью трассировки луча, примененной к концам интервала. В случае если для концов интервала видимыми становятся разные поверхности, интервал рекурсивно разбивается.
+
+Как и все scanline алгоритмы [atherton1983] пытается использовать \todo{свойства когерентности} геометрии для оптимизации вычислений. Когерентность интервалов можно считать первым улучшением по сравнению с трассировкой лучей. Если на границах интервала видима одна и та же поверхность, то и результаты расчета освещения (shading) можно интерполировать между концами интервала.
 
 \todo{Визуализация CSG на ЦПУ? ранние подходы}
 
