--- a/Dissertation/part1.tex
+++ b/Dissertation/part1.tex
@@ -45,7 +45,7 @@
 
 Пространственные массивы, как правило, слишком подробны (избыточны) в качестве основного представления для моделирования однородных твердых тел с требуемой точностью. Однако алгоритмы и структуры данных, используемые для них, могут быть существенно проще.
 
-Подробность воксельного представления может быть скомпенсирована правильно выбранной иерархической структурой данных (за счет пропуска пустого и/или однородного пространства) ценой усложнения алгоритмов обработки данных. Уже в работе \cite{REDD78} предлагалось строить дерево адаптивных разбиений пространства для уменьшения объема хранимых данных. Позже в работе \cite{Meagher82} было предложено понятие восьмеричного дерева (октодерево, octree) в качестве эффективной структуры для хранения и обработки воксельных данных. С тех пор октодеревья получили широкое распространение. Часто воксельное представление используется как вспомогательное, для работы с другим представлением. Дальнейшие исследования предлагали множество вариантов развития этой структуры. Дополненные октодеревья предложенные в работе [8] добавляют набор специальных узлов для представления плоских граней, ребер и вершин. В работе [16] предлагается использовать фрагменты описания CSG деревьев (см. раздел \todo{sect_csg}) в узлах октодерева, для последующей реконструкции модели. Первый подход оптимизирован для совместного использования воксельного и граничного (см. раздел \todo{sect_boundary_rep}) представления и позволяет легче переходить от одного к другому. В то же время второй подход рассчитан на совместное использование воксельного и CSG представления. Ещё одним вариантом гибридного подхода являются адаптивно заданные поля расстояний (Adaptively sampled distance fields), описанные в работах [17, 13]. Такой подход, совмещающий функциональное (см. раздел \todo{sect_implicit}) и воксельное представления, используется как внутреннее представление, например, для \todo{инструментов цифрового скульптинга (sculpting-style design tools)} [43] и \todo{моделирования машинной обработки (machining simulations)} [46].
+Подробность воксельного представления может быть скомпенсирована правильно выбранной иерархической структурой данных (за счет пропуска пустого и/или однородного пространства) ценой усложнения алгоритмов обработки данных. Уже в работе \cite{REDD78} предлагалось строить дерево адаптивных разбиений пространства для уменьшения объема хранимых данных. Позже в работе \cite{Meagher82} было предложено понятие восьмеричного дерева (октодерево, octree) в качестве эффективной структуры для хранения и обработки воксельных данных. С тех пор октодеревья получили широкое распространение. Часто воксельное представление используется как вспомогательное, для работы с другим представлением. Дальнейшие исследования предлагали множество вариантов развития этой структуры. Дополненные октодеревья предложенные в работе [8] добавляют набор специальных узлов для представления плоских граней, ребер и вершин. В работе [16] предлагается использовать фрагменты описания CSG деревьев (см. раздел \ref{sect_csg}) в узлах октодерева, для последующей реконструкции модели. Первый подход оптимизирован для совместного использования воксельного и граничного (см. раздел \ref{sect_boundary_rep}) представления и позволяет легче переходить от одного к другому. В то же время второй подход рассчитан на совместное использование воксельного и CSG представления. Ещё одним вариантом гибридного подхода являются адаптивно заданные поля расстояний (Adaptively sampled distance fields), описанные в работах [17, 13]. Такой подход, совмещающий функциональное (см. раздел \ref{sect_implicit}) и воксельное представления, используется как внутреннее представление, например, для \todo{инструментов цифрового скульптинга (sculpting-style design tools)} [43] и \todo{моделирования машинной обработки (machining simulations)} [46].
 
 D. Meagher, “Geometric modeling using octree encoding,” Computer Graphics
 and Image Processing, vol. 19, no. 2, pp. 129–147, June 1982.
@@ -142,7 +142,7 @@ subdivision which dovetails with ASDF creation and population.
 construction algorithm," SIGGRAPH Comput. Graph., vol. 21, no. 4, pp. 163{
 169, Aug. 1987. [Online]. Available: http://doi.acm.org/10.1145/37402.37422
 
-[36] H. M¨uller and M. Wehle, Visualization of implicit surfaces using adaptive tetrahedrizations," Scientific Visualization Conference, vol. 0, p. 243, 1997.
+36 H. Muller and M. Wehle, Visualization of implicit surfaces using adaptive tetrahedrizations," Scientific Visualization Conference, vol. 0, p. 243, 1997.
 
 \section{Конструктивная блочная геометрия} \label{sect_csg}
 
@@ -173,7 +173,7 @@ construction algorithm," SIGGRAPH Comput. Graph., vol. 21, no. 4, pp. 163{
 
 \includegraphics[]{1.png}}
 
-\todo{Рисунок 3} показывает простоту вычисления булевых операций в одномерном пространстве для двух примитивов. В дополнение к простоте, метод имеет дополнительное преимущество для визуализации: после того как ближайшая точка определена, дальнейшие вычисления можно отбросить. Однако, перед тем как применить эти простые правила, необходимо пересечь луч с CSG примитивами и отсортировать точки пересечения. К тому же, все эти шаги должны быть выполнены для каждого пикселя изображения. [Roth] описывает процедуру отсечения для уменьшения числа поверхностей, с которыми нужно пересечь луч для каждого пикселя. Однако, хотя такая оптимизация и дает эффект, тем не менее вычислительная сложность алгоритма не меняется. [Roth] также приводит метод для определения и визуализации только силуэта и линий пересечения поверхностей, но этот метод не совместим с \todo{shaded} визуализацией.
+\todo{Рисунок 3} иллюстрирует вычисление булевых операций в одномерном пространстве для двух примитивов. В дополнение к простоте, метод имеет дополнительное преимущество для визуализации: после того как ближайшая точка определена, дальнейшие вычисления можно отбросить. Однако, перед тем как применить эти простые правила, необходимо пересечь луч с CSG примитивами и отсортировать точки пересечения. К тому же, все эти шаги должны быть выполнены для каждого пикселя изображения. [Roth] описывает процедуру отсечения для уменьшения числа поверхностей, с которыми нужно пересечь луч для каждого пикселя. Однако, хотя такая оптимизация и дает эффект, тем не менее вычислительная сложность алгоритма не меняется. [Roth] также приводит метод для определения и визуализации только силуэта и линий пересечения поверхностей, но этот метод не совместим с \todo{shaded} визуализацией.
 
 \includegraphics[]{2.png}}
 
@@ -186,9 +186,9 @@ construction algorithm," SIGGRAPH Comput. Graph., vol. 21, no. 4, pp. 163{
 
 Алгоритм, предложенный [atherton1983] использует те же 4 шага, что и обычный алгоритм scanline, однако вместо определения видимости сегмента в интервале по его близости к виртуальной камере (наблюдателю), используется более сложная процедура, аналогичная процедуре поиска видимой поверхности с помощью трассировки луча, примененной к концам интервала. В случае, если для концов интервала видимыми становятся разные поверхности, интервал рекурсивно разбивается.
 
-Как и во многих других исследованиях, посвещенных \todo{scanline алгоритмам}, в работе [atherton1983] была предпринята попытка использовать \todo{свойства когерентности} геометрии для оптимизации вычислений. Когерентность интервалов можно считать первым улучшением по сравнению с трассировкой лучей. Если на границах интервала видима одна и та же поверхность, то и результаты расчета освещения (shading) можно интерполировать между концами интервала.
+Как и во многих других исследованиях, посвещенных \todo{scanline алгоритмам}, в работе [atherton1983] была предпринята попытка использовать \todo{свойства когерентности} геометрии для оптимизации вычислений. Когерентность интервалов можно считать первым улучшением по сравнению с трассировкой лучей. Если на границах интервала видима одна и та же поверхность, то и результаты расчета затенения можно интерполировать между концами интервала.
 
-\todo{Визуализация CSG на ЦПУ? ранние подходы}
+\todo{из статьи}
 
 Все разнообразие алгоритмов визуализации CSG моделей можно разделить на три базовых подхода. Первый подход основан на предварительном расчете полной границы CSG объекта (переход к граничному представлению), которая затем тесселируется и визуализируется с использованием традиционных инструментов 3D графики (Direct3D, OpenGL). Поскольку расчет границы является  вычислительно трудоемкой операцией, алгоритмы данной группы зачастую применимы только для статических сцен и не позволяют выполнять интерактивное редактирование конструктивных моделей.
 
@@ -242,10 +242,6 @@ Hardware-based slicing algorithm for CSG [58, 44].
 %==============================================================================
 \todo{END OF TEXT}
 %==============================================================================
-
-% дальше идут LATEX примеры
-
-Мы можем сделать \textbf{жирный текст} и \textit{курсив}.
 
 %\newpage
 %============================================================================================================================
