--- a/Dissertation/part1.tex
+++ b/Dissertation/part1.tex
@@ -2,32 +2,19 @@
 
 \todo{section Классификация геометрических представлений?}
 
-\section{Представления твердотельной геометрии} \label{sect1_1}
-
-Твёрдое тело – область трёхмерного пространства, состоящая из однородного материала и ограниченная замкнутой поверхностью.
-Грань – гладкая (не обязательно плоская) часть поверхности детали, ограниченная замкнутым контуром из рёбер. Частный случай – шарообразные твёрдые тела и тела вращения с гладким профилем, состоящие из единой грани, которая, соответственно, не имеет рёбер.
-
-Ребро – пространственная кривая произвольной конфигурации, полученная на пересечении двух граней.
-
-Вершина – точка в трёхмерном пространстве. Для твёрдого тела это может быть одна из точек на конце ребра.
-
 \section{Твердотельное моделирование} \label{solid_modeling}
 
-Трёхмерная твердотельная геометрия играет важную роль во многих научных и инженерных областях. Также она совершенно необходима для областей связанных с производством.
+В геометрическом моделировании используются термины «поверхностное моделирование» (моделирование поверхностей) и «твердотельное моделирование» (моделирование твердых тел, solid modelling). В первом случае результатом моделирования является некоторая оболочка (или несколько оболочек), описывающая поверхность моделируемого объекта. Во втором случае результатом моделирования является полная геометрическая модель твердого тела, которая позволяет автоматизированно ответить на любой вопрос о его геометрических свойствах (вычисление объема тела, поиск пересечений с другими телами, изображение тела с любого ракурса и т.д.). Процесс моделирования в первом случае также значительно отличается от процесса моделирования во втором случае.
 
-Для геометрического моделирования предметов, занимающих конечный объем, в математике используются объекты, называемые твердыми телами (rigid body). При моделировании тел строятся поверхности, отделяющие занимаемую ими часть пространства от остальной части пространства. На практике используется несколько представлений геометрии "--- подходов к описанию твердых тел.
+В поверхностном моделировании сначала создаются и модифицируются требуемым образом поверхности, описывающие отдельные элементы моделируемого объекта. Эти поверхности обрезают по линиям пересечения, сопрягают друг с другом поверхностями скругления или перехода (fillets, chamfers), а также выполняют над ними другие операции. Затем из полученных поверхностей собирают оболочку. Этот подход к моделированию является непосредственной эволюцией традиционного подхода к построению чертежей. В поверхностном моделировании результирующая оболочка не обязательно должна быть замкнутой. Она может отражать лишь часть (главную часть) моделируемого объекта. Поверхностное моделирование позволяет сосредоточить усилия на сложных формах объекта и широко применяется для проектирования кузовов автомобилей и планеров самолетов.
+
+В твердотельном моделировании с самого начала работа идет с целостной моделью тела, а не с отдельными поверхностями. Например, в граничном представлении, оболочки (shells) полностью описывают поверхности моделируемых объектов, отделяющие их внутренний объем от остальной части пространства. Процесс построения тела в данном случае часто аналогичен процессу изготовления моделируемого объекта. Сначала создается модель некоторой заготовки простой формы. Далее заготовка изменяется необходимым образом. Для этого могут используются булевы операции над телами, операция построения тонкостенного тела из заготовки, операция скругления ребер, операция построения ребер жесткости и другие операции. На практике используется несколько представлений геометрии "--- подходов к описанию твердых тел.
 
 Понятие твердотельного моделирования опирается на потребность в информационной полноте в системах механического геометрического моделирования в том смысле, что любая компьютерная модель должна отвечать на все геометрические вопросы, которые могут быть заданы по отношению к соответствующему физическому объекту. Это требование не противоречит возможности существования нескольких компьютерных представлений одного и того же физического объекта, если такие представления согласованы. Невозможно вычислительно проверить информационную полноту представления, если понятие физического объекта не определено в терминах вычислимых математических свойств и не зависит от какого-либо конкретного представления. Такие рассуждения привели к разработке парадигмы моделирования, которая сформировала область твердотельного моделирования, как мы ее знаем сегодня.
 
-Все изготовляемые компоненты имеют конечный размер и имеют чётко определённые границы, поэтому изначально основное внимание уделялось математическому моделированию твердых тел из однородного изотропного материала, к которым можно было бы добавлять или удалять материал (имитируя производственные процессы). Эти свойства можно перевести в свойства подмножеств трехмерного евклидова пространства. Два общих подхода к определению твердотельности основаны на топологии множеств точек и алгебраической топологии соответственно. Обе модели указывают, как твердые тела могут быть построены из простых частей или ячеек.
+Любая схема представления геометрия является методом хранения информации о классе полу-аналитических подмножеств евклидова пространства. Это означает, что все представления представляют собой разные способы организации одних и тех же геометрических и топологических данных в форме структур данных. Однако, моделируемое пространство каждого отдельно взятого представления геометрии ограничено, и ни одна схема представления геометрии не может представить все возможные твердые тела. Например, тела представленные граничным представлением (Boundary representation) не всегда могут быть представлены телом движения (sweep solid), кроме простейших случаев. Это заставляет современные системы геометрического моделирования поддерживать несколько схем представления твердых тел, а также способствовать эффективному преобразованию схем представления.
 
-Согласно модели твердотельности, основанной на множествах точек, все точки любого $X \in \mathbf{R}^3$ можно классифицировать по их окрестностям относительно $X$ как внутреннюю, внешнюю или граничную точку. Окрестность точки $p \in X$ принимает вид открытого шара. Для того чтобы множество $X$ считалось сплошным (твердотельным), каждая окрестность любой $p \in X$ должна быть трехмерной. Точки с окрестностями более низких размерностей указывают на отсутствие твердотельности.
-
-\todo{...}
-
-Таким образом, любая схема представления геометрия является методом хранения информации о классе \todo{полу-аналитических} подмножеств евклидова пространства. Это означает, что все представления представляют собой разные способы организации одних и тех же геометрических и топологических данных в форме структур данных. Однако, моделируемое пространство каждого отдельно взятого представления геометрии ограничено, и ни одна схема представления геометрии не может представить все возможные твердые тела. Например, тела представленные граничным представлением (Boundary representation) не всегда могут быть представлены телом движения (sweep solid), кроме простейших случаев. Это заставляет современные системы геометрического моделирования поддерживать несколько схем представления твердых тел, а также способствовать эффективному преобразованию схем представления.
-
-Обзор основных представлений твердотельной геометрии дан \cite{Requicha80} ещё в 1980 году. Там же приведён перечень формальных свойств (таких как уникальность, однозначность и т.п.) систем представления твердых тел. Однако поиск оптимальных представлений для конкретных задач и исследование гибридных схем продолжаются и по сей день.
+Обзор основных представлений твердотельной геометрии дан \cite{Requicha80} ещё в 1980 году. Там же приведён перечень формальных свойств (таких как уникальность, однозначность и т.п.) систем представления твердых тел, а так же понятие R-множеств и регуляризованных операций над множествами. Однако, поиск оптимальных представлений для конкретных задач и исследование гибридных схем продолжаются и по сей день.
 
 Ниже приведён обзор основных подходов к представлению твердых тел.
 
@@ -82,9 +69,7 @@ nc milling simulation using composite adaptively sampled distance fields,"
 Comput. Aided Des., vol. 44, no. 6, pp. 522{536, Jun. 2012. [Online]. Available:
 http://dx.doi.org/10.1016/j.cad.2012.02.002
 
-
-\todo{SVO}
-\todo{volume compression, wavelets?}
+\todo{SVO?}
 
 \section{\todo{Декомпозиция на ячейки}} \label{sect_cell_decompositions}
 
@@ -99,8 +84,6 @@ http://dx.doi.org/10.1016/j.cad.2012.02.002
 В работе \cite{Modeling with Simplicial Complexes} 1996 топологическая концепция симплициального комплекса ставится в соответствие триангуляции для твердотельного моделирования. 
 
 \todo{TetWild}
-
-\todo{тела заметания! но поверхность движения?}
 
 \section{Заметание} \label{sect_sweeping}
 
@@ -124,7 +107,7 @@ http://www.shapeways.com/tutorials/prepping blender files for 3d printing
 
 \section{Функциональное представление} \label{sect_implicit}
 
-Понятие функционального представления (F-rep) приводится в \todo{"Function representation in geometric modeling: concepts, implementation and applications" [2]} как универсальное представление для тел заданных в многомерном пространстве. Тело, как множество точек в многомерном пространстве, определяется одной непрерывной вещественной функцией координат $f(x_{1},x_{2},...,x_{n})$. Эта функция вычисляется в данной точке путем обхода древовидной структуры с функциями-примитивами во внешних узлах и функциями-операциями во внутренних. Точки, для которых выполняется $f(x_{1},x_{2},...,x_{n})\geq 0$ принадлежат телу, точки, для которых $ f(x_{1},x_{2},...,x_{n})<0$ находятся вне тела. Множество точек, для которых $f(x_{1},x_{2},...,x_{n})=0$ составляет границу тела. Поверхность, состоящая из множества точек, соответствующих определённому значению функции называется изоповерхностью. Так в трехмерном пространстве, простейшей формой предиката является условие знака вещественной функции, приводящее к представлению множеств по равенствам и неравенствам. Например, если $ f = ax + by + cz + d$  условия $f (p) = 0$, $f (p)> 0$ и $f (p) <0$ представляют соответственно плоскость и два открытых линейных полупространства. Более сложные функциональные примитивы могут быть определены с помощью булевых комбинаций более простых предикатов.
+Понятие функционального представления (F-rep, implicit modeling) приводится в \todo{"Function representation in geometric modeling: concepts, implementation and applications" [2]} как универсальное представление для тел заданных в многомерном пространстве. Тело, как множество точек в многомерном пространстве, определяется одной непрерывной вещественной функцией координат $f(x_{1},x_{2},...,x_{n})$. Эта функция вычисляется в данной точке путем обхода древовидной структуры с функциями-примитивами во внешних узлах и функциями-операциями во внутренних. Точки, для которых выполняется $f(x_{1},x_{2},...,x_{n})\geq 0$ принадлежат телу, точки, для которых $ f(x_{1},x_{2},...,x_{n})<0$ находятся вне тела. Множество точек, для которых $f(x_{1},x_{2},...,x_{n})=0$ составляет границу тела. Поверхность, состоящая из множества точек, соответствующих определённому значению функции называется изоповерхностью. Так в трехмерном пространстве, простейшей формой предиката является условие знака вещественной функции, приводящее к представлению множеств по равенствам и неравенствам. Например, если $ f = ax + by + cz + d$  условия $f (p) = 0$, $f (p)> 0$ и $f (p) <0$ представляют соответственно плоскость и два открытых линейных полупространства. Более сложные функциональные примитивы могут быть определены с помощью булевых комбинаций более простых предикатов.
 
 Первым применением функционального подхода к моделированию сложных тел можно считать R-функции Рвачева [63, 74]. Этот подход позволяющий представить твердое тело в виде единственной вещественной функции использовался для задач физического моделирования. Были разработаны подходы для применения теоретико-множественных операций над телами и способы обхода $C^1$ прерывности функций, представляющих твердые тела. \todo{check Ricci73}
 
@@ -146,19 +129,11 @@ construction algorithm," SIGGRAPH Comput. Graph., vol. 21, no. 4, pp. 163{
 
 \section{Конструктивная блочная геометрия} \label{sect_csg}
 
-Конструктивная блочная геометрия (Constructive Solid Geometry или CSG) представляет собой семейство схем для представления твердых тел в виде булевых комбинаций примитивов с помощью \todo{регуляризованных} операций булевой логики на множествах. CSG представления имеют форму упорядоченных двоичных деревьев, где нетерминальные (внутренние) узлы представляют собой либо твердотельные преобразования (перенос и поворот), либо регуляризованные операции на множествах. Терминальные (листовые) узлы являются примитивами, представляющими замкнутые регулярные множества. Таким образом, каждое поддерево представляет собой множество, полученное в результате применения указанных операций на множестве, представленном листовыми примитивами поддерева. Привлекательные свойства CSG включают в себя компактность, гарантированную корректность твердых тел (при использовании корректных твердых тел в качестве примитивов), и естественный контроль формы твердого тела в терминах параметров высокого уровня, определяющих примитивы твердого тела, их положения и ориентации. Относительно простая структура данных и изящные рекурсивные алгоритмы еще больше способствовали популярности CSG на заре развития САПР и геометрического моделирования. Позже, проблемы CSG подхода как основного представления твердых тел всё же перевесили его преимущества. К таким проблемам относят: сложность прямой визуализации CSG объектов (без перехода к граничному представлению), сложность перехода к граничному представлению, сложность задания незамкнутых объектов (это возможно если использовать незамкнутые примитивы, но тогда необходимо отказаться от одного из главных преимуществ — гарантированной корректности) и т. д. Сейчас CSG представление используется в основном как вспомогательное или промежуточное представление, для выполнения булевых операций над телами.
+Конструктивная блочная геометрия (Constructive Solid Geometry или CSG) представляет собой семейство схем для представления твердых тел в виде булевых комбинаций примитивов с помощью регуляризованных \cite{Requicha80} \cite{Requicha77} операций на множествах. CSG представления имеют форму упорядоченных двоичных деревьев, где нетерминальные (внутренние) узлы представляют собой либо твердотельные преобразования (перенос и поворот), либо регуляризованные операции на множествах. Терминальные (листовые) узлы являются примитивами, представляющими замкнутые регулярные множества. Таким образом, каждое поддерево представляет собой множество, полученное в результате применения указанных операций на множестве, представленном листовыми примитивами поддерева. Привлекательные свойства CSG включают в себя компактность, гарантированную корректность твердых тел (при использовании корректных твердых тел в качестве примитивов), и естественный контроль формы твердого тела в терминах параметров высокого уровня, определяющих примитивы твердого тела, их положения и ориентации. Относительно простая структура данных и изящные рекурсивные алгоритмы еще больше способствовали популярности CSG на заре развития САПР и геометрического моделирования. Позже, проблемы CSG подхода как основного представления твердых тел всё же перевесили его преимущества. К таким проблемам относят: сложность прямой визуализации CSG объектов (без перехода к граничному представлению), сложность перехода к граничному представлению, сложность задания незамкнутых объектов (это возможно если использовать незамкнутые примитивы, но тогда необходимо отказаться от одного из главных преимуществ — гарантированной корректности) и т. д.
 
-\todo{check Ricci73}
-
-В работе \cite{Requicha 77} года были заложены теоретические основы подхода. Позже в статье 1980 года понятие твердотельного моделирования связано с булевой логикой на р-сетах. Дальнейшее развитие в статье 85 года. Язык падл-1 и падл-2, в каких системах использовали CSG?
-
-\todo{Computable Operators on Regular Sets}
+Сейчас CSG представление используется в основном как вспомогательное или промежуточное представление, для выполнения булевых операций над телами. В то же время, для многих задач CSG представление остается наиболее естественным. В таких задачах, отказ от дополнительных схем представления позволил бы значительно упростить соответствующие САПР, повысить быстродействие систем. Настоящая работа призвана устранить один из главных недостатков CSG представления: невозможность интерактивной визуализации сложных CSG моделей, и тем самым способствовать развитию САПР использующих CSG как основное представление твердых тел.
 
 \section{Подходы к визуализации CSG} \label{sect_csg_vis}
-
-\todo{Булевы операции vs алгебраические операции над множествами}
-
-\todo{хронологически}
 
 Самым ранним способом визуализации CSG моделей была отрисовка линиями (wireframe). Для этого необходимо построить линии пересечения всех поверхностей в модели и спроектировать их на экранную плоскость. Позже, этот метод начали дополнять удалением невидимых линий. [e.g. Appel67], [An algorithm for eliminating the hidden lines in computer-drawn polyhedra 68]
 
@@ -188,8 +163,6 @@ construction algorithm," SIGGRAPH Comput. Graph., vol. 21, no. 4, pp. 163{
 
 Как и во многих других исследованиях, посвещенных \todo{scanline алгоритмам}, в работе [atherton1983] была предпринята попытка использовать \todo{свойства когерентности} геометрии для оптимизации вычислений. Когерентность интервалов можно считать первым улучшением по сравнению с трассировкой лучей. Если на границах интервала видима одна и та же поверхность, то и результаты расчета затенения можно интерполировать между концами интервала.
 
-\todo{из статьи}
-
 Все разнообразие алгоритмов визуализации CSG моделей можно разделить на три базовых подхода. Первый подход основан на предварительном расчете полной границы CSG объекта (переход к граничному представлению), которая затем тесселируется и визуализируется с использованием традиционных инструментов 3D графики (Direct3D, OpenGL). Поскольку расчет границы является  вычислительно трудоемкой операцией, алгоритмы данной группы зачастую применимы только для статических сцен и не позволяют выполнять интерактивное редактирование конструктивных моделей.
 
 Второй подход основан на переходе к воксельному представлению (spatial enumeration), для этого достаточно иметь возможность классифицировать точку относительно CSG дерева. После этого геометрию можно визуализировать как 3Д текстуру, средствами volume rendering. К недостатком такого подхода можно отнести большой объем занимаемого пространства и ограниченную точность представления (шагом воксельной сетки). Однако такой подход достаточно прост и производительность визуализации не зависит от сложности CSG дерева. Hardware-based slicing algorithm for CSG [58, 44].
@@ -198,13 +171,13 @@ construction algorithm," SIGGRAPH Comput. Graph., vol. 21, no. 4, pp. 163{
 
 Альтернативный подход был предложен в более поздней работе [4] и получил название Blister. Вместо нормальной формы, данный метод преобразует CSG формулу к списку Blist [5], содержащему каждый примитив ровно один раз. Для визуализации заданной конструктивной модели Blister задействует многопроходную технику разложения сцены по слоям (англ. depth peeling), с помощью которой входная сцена разбивается на слои, все фрагменты которых имеют одинаковый индекс близости (занимают равные позиции в списке фрагментов, отсортированных по мере удаления от камеры). Точки каждого слоя классифицируются согласно заданному CSG выражению и комбинируются для синтеза окончательного изображения. Показано, что для модели с k слоями глубины и n примитивами алгоритм вычисляет изображение за время O(kn). В худшем случае k линейно зависит от n, поэтому трудоемкость следует оценить как O(n2).
 
-Subsequent to the Blister approach, the Constructive Solid Trimming (CST) algorithm [46] and Optimised Blist Form [76].
+\todo{Subsequent to the Blister approach, the Constructive Solid Trimming (CST) algorithm [46] and Optimised Blist Form [76].}
 
-Transparent and edge-enhanced interactive CSG rendering [67].
+\todo{Transparent and edge-enhanced interactive CSG rendering [67].}
 
-A surfel approach to CSG rendering [13].
+\todo{A surfel approach to CSG rendering [13].}
 
-Hardware-based slicing algorithm for CSG [58, 44].
+\todo{Hardware-based slicing algorithm for CSG [58, 44].}
 
 Указанные выше алгоритмы обеспечивают интерактивное отображение конструктивных моделей малой или средней  сложности (от нескольких сотен до нескольких десятков тысяч примитивов). При этом их общей чертой является активное использование многопроходных схем, которые ставят скорость рендеринга в зависимость от пропускной способности памяти. На протяжении последних десяти лет пропускная способность памяти GPU растет значительно медленнее производительности вычислительных модулей,  что делает передачу данных узким местом во многих GPU алгоритмах.
 
@@ -232,12 +205,6 @@ Hardware-based slicing algorithm for CSG [58, 44].
 Корректный расчет глобального освещения характеризуется высокой вычислительной трудоемкостью, поэтому большинство интерактивных систем базируется на упрощенных моделях, которые сочетают приемлемое быстродействие и высокое качество визуализации. Для интерактивного расчета глобального освещения применяются различные подходы [111], такие как метод излучательности (англ. radiosity), стохастическая трассировка путей (англ. stochastic path tracing), метод фотонных карт (англ. photon mapping), метод «мгновенной» излучательности (англ. instant radiosity), «многосветовые» (англ. many-light-based) подходы, точечные подходы (англ. point-based) или «микрорендеринг» (англ. micro-rendering) и метод дискретных координат (англ. discrete ordinate). Кроме того, для повышения быстродействия практически всех перечисленных алгоритмов могут применяться схемы кэширования.
 
 В настоящей работе используется трассировка лучей как основной метод визуализации CSG деревьев. Реализованная операция бросания луча позволяет естественным образом расширить подход для расчета глобального освещения используя (стохастическую) трассировку путей, которая решает уравнение визуализации методом Монте-Карло. Хотя современные графические ускорители обрабатывают свыше 100 миллионов случайных лучей в секунду, некогерентность вторичных отскоков является основной проблемой эффективных реализаций [112]. Быстрое разветвление путей ведет к плохой утилизации вычислительных ресурсов и снижает эффективность доступа к памяти.
-
-\todo{ещё про трассировку путей?}
-
-\todo{полноценный обзор методов?}
-
-\todo{обзор сапр и их возможностей по визуализации?}
 
 %==============================================================================
 \todo{END OF TEXT}
